--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,19 +8,24 @@
     <title>Hamburger Button & Hidden Menu</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 </head>
+
 <body>
     <h1>Hello everybody !</h1><br><br>
     <h2>This is a cool Hamburger Button with a nice Hidden Menu effect.</h2>
     <button id="btn">🍔</button>
-    
+
     <nav id="nav">
         <ul>
-        <li>           <a href="#">Behance</a></li>
-            <li>   <a href="#">Instagram</a></li>
-                <li>    <a href="#">Twitter</a>
-        </li>
-    </ul>
+            <li> <a href="https://www.linkedin.com/in/julien-penna/">LinkedIn</a></li>
+            <li> <a href="https://github.com/juju6x7">GitHub</a></li>
+            <li> <a href="https://www.behance.net/juju6x7">Behance</a></li>
+            <li> <a href="https://www.instagram.com/juju6x7/">Instagram</a></li>
+            <li> <a href="https://twitter.com/juju6x7">Twitter</a>
+            </li>
+        </ul>
     </nav>
 </body>
+
 </html>
