--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
 
     <nav id="nav">
         <ul>
-            <li> <a href="https://www.linkedin.com/in/julien-penna/">LinkedIn</a></li>
-            <li> <a href="https://github.com/juju6x7">GitHub</a></li>
-            <li> <a href="https://www.behance.net/juju6x7">Behance</a></li>
-            <li> <a href="https://www.instagram.com/juju6x7/">Instagram</a></li>
-            <li> <a href="https://twitter.com/juju6x7">Twitter</a>
+            <li> <a href="https://www.linkedin.com/in/dev-web-front-end-julien-penna/">LinkedIn</a></li>
+            <li> <a href="https://github.com/jujudev7">GitHub</a></li>
+            <li> <a href="https://www.behance.net/jujudev7">Behance</a></li>
+            <li> <a href="https://twitter.com/jujudev7">Twitter</a>
             </li>
         </ul>
     </nav>
