link -> target blank

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
     <nav id="nav">
         <ul>
-            <li> <a href="https://www.linkedin.com/in/dev-web-front-end-julien-penna/">LinkedIn</a></li>
-            <li> <a href="https://github.com/jujudev7">GitHub</a></li>
-            <li> <a href="https://www.behance.net/jujudev7">Behance</a></li>
-            <li> <a href="https://twitter.com/jujudev7">Twitter</a>
+            <li> <a href="https://www.linkedin.com/in/dev-web-front-end-julien-penna/" target="_blank">LinkedIn</a></li>
+            <li> <a href="https://github.com/jujudev7" target="_blank">GitHub</a></li>
+            <li> <a href="https://www.behance.net/jujudev7" target="_blank">Behance</a></li>
+            <li> <a href="https://twitter.com/jujudev7" target="_blank">Twitter</a>
             </li>
         </ul>
     </nav>
